--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
-    "start": "concurrently --kill-others \"nodemon ai.js\"  \"nodemon bot.js\"",
-    "heroku-postbuild": "yarn start"
+    "start": "concurrently --kill-others \"nodemon ai.js\"  \"nodemon bot.js\""
   },
   "dependencies": {
     "discord.js": "^14.6.0",
